Movie and MovieList components

--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,4 +9,5 @@
 @using BlazorPeliculas.Client
 @using BlazorPeliculas.Client.Shared
 @using BlazorPeliculas.Client.Helpers
-@using BlazorPeliculas.Shared.Entities;
+@using BlazorPeliculas.Client.Components
+@using BlazorPeliculas.Shared.Entities
