--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @using BlazorPeliculas.Client.Helpers
 @using BlazorPeliculas.Client.Components
 @using BlazorPeliculas.Shared.Entities
+@using BlazorPeliculas.Client.Repositories;
