--- a/Client/Components/MovieList.razor
+++ b/Client/Components/MovieList.razor
@@ -1,7 +1,7 @@
 ﻿
 <input type="checkbox" @bind="ShowButtons"/>
 <h3>Movies</h3>
-<GenericList List=@Peliculas > 
+<GenericList List=@Movies > 
     <NoRecords>
         <p>No hay peliculas para mostrar</p>
     </NoRecords>
