--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -2,8 +2,17 @@
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<h1 class="red-color" style="font-size:@GlobalState.FontSize">Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<section class="select-font-size">
+    <select @bind="GlobalState.FontSize" class="form-select">
+        <option value="10px">10px</option>
+        <option value="20px">20px</option>
+        <option value="30px">30px</option>
+    </select>
+</section>
+
+<p role="status">Current count: @CurrentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCountJs">Click me js</button>
