--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -9,9 +9,14 @@
         <div class="top-row px-4">
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
+        <CascadingValue Value="GlobalState">
+            <article class="content px-4">
+                @Body
+            </article>
+        </CascadingValue>
     </main>
 </div>
+
+@code{
+    public AppState GlobalState = new() { FontSize = "16px" };
+}
