--- a/Client/App.razor
+++ b/Client/App.razor
@@ -1,4 +1,8 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router 
+    AppAssembly="@typeof(App).Assembly"
+    AdditionalAssemblies="@AdditionalAssemblies"
+    OnNavigateAsync="@OnNavigateAsync"
+>
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
