--- a/Client/Components/Movie.razor
+++ b/Client/Components/Movie.razor
@@ -1,13 +1,19 @@
 ﻿<div>
-    <p>Title: <strong>@Pelicula.Title</strong></p>
-    <p>Lauch date: <strong>@Pelicula.LaunchDate.ToString("dd MMM yyyy")</strong></p>
-
-    @if (ShowButtons)
-    {
+    <div class="me-2 mb-2 text-center">
+        <a href="@UrlMovie">
+            <img src="@MovieItem.Poster" alt="poster" style="width: 225px; height: 300px" />
+        </a>
+        <a href="@UrlMovie" class="text-decoration-none">
+            <p style="max-width: 225px; height: 44px; font-size: 15px; font-weight: bold">Title: @MovieItem.ShortTitle</p>
+        </a>
+    </div>
+    <div class="text-center">
+        <a class="btn btn-info">Edit</a>
         <button 
-        type="button" 
-        @onclick="@(() => DeleteMovie.InvokeAsync(Pelicula))">
+        type="button"
+        class="btn btn-danger"
+        @onclick="@(() => DeleteMovie.InvokeAsync(MovieItem))">
             Delete
         </button>
-    }
+    </div>
 </div>
