--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -24,6 +24,21 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="genres">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Genres
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="actors">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Actors
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="movie/create">
+                <span class="oi oi-list-rich" aria-hidden="true"></span>Create movie
+            </NavLink>
+        </div>
     </nav>
 </div>
 
