--- a/Client/Pages/Genre/Genres.razor
+++ b/Client/Pages/Genre/Genres.razor
@@ -2,6 +2,12 @@
 
 <h3>Genres</h3>
 
+<div class="row">
+    <div class="col-3">
+        <a href="genre/create" class="btn btn-secondary d-grid btn-sm">Create genre</a>
+    </div>
+</div>
+
 @code {
 
 }
